--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
-<ruleset name="BP Block Users">
-	<description>BP Block Users Custom WordPress Coding Standards</description>
+<ruleset name="BP Emails for BBP">
+	<description>BP Emails for BBP Custom WordPress Coding Standards</description>
 
 	<rule ref="WordPress-Core"/>
 	<rule ref="WordPress-Docs"/>
