--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,14 @@
 # gitignore file for BP Emails for BBP
 
-# Configuration files with possibly sensitive information
-.htaccess
-
 # Files and folders related to build/test tools
-/phpcs.xml
-/phpunit.xml
-/tests/phpunit/build
-/node_modules
-/npm-debug.log
-
-# BP Emails for BBP's output directory.
 /build
+/coverage
+/node_modules
+npm-debug.log
+phpcs.xml
+phpunit.xml
+wp-cli.local.yml
 
 # Operating system specific files
 .DS_Store
+Thumbs.db
