--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "Gruntfile.js",
   "author": "Brandon Allen",
   "description": "Send bbPress forum and topic subscription emails using Buddypress' email API.",
-  "license": "GPL-2.0",
+  "license": "GPL-2.0-or-later",
   "repository": "github:thebrandonallen/bp-emails-for-bbp",
   "devDependencies": {
     "grunt": "~1.0.1",
@@ -14,7 +14,7 @@
     "grunt-contrib-jshint": "~1.1.0",
     "grunt-contrib-watch": "~1.0.0",
     "grunt-string-replace": "~1.3.1",
-    "grunt-wp-i18n": "~1.0.0",
+    "grunt-wp-i18n": "~1.0.1",
     "grunt-wp-readme-to-markdown": "~2.0.1",
     "matchdep": "~2.0.0"
   }
